src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Product1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Org1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Org</label>
        <referenceTo>Product_Org__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Organization__c</fullName>
        <label>Product Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>